# MediaCodecDemo

./: README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OpenGLRender.cpp  OpenGLRender.h  log.h  native.h  yuvRender.cpp
app/src/main/java/com/jkf/mediacodecdemo/: H265Decoder.java  MainActivity.java  MainActivity2.java  MyGLSurfaceView.java  Render.java
app/src/main/res/layout/: activity_main.xml  activity_main2.xml
gradle/wrapper/: gradle-wrapper.properties
